--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@sanity/client": "^4.0.1",
+    "@sanity/image-url": "^1.0.2",
     "@types/node": "18.11.19",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "framer-motion": "^9.0.1",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
+    "sass": "^1.58.0",
     "typescript": "4.9.5"
   }
 }
