--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@types/node": "18.11.19",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "@types/react-tooltip": "^4.2.4",
     "framer-motion": "^9.0.1",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-tippy": "^1.4.0",
+    "react-tooltip": "4.2.21",
     "sass": "^1.58.0",
     "typescript": "4.9.5"
   }
