--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.10.0",
     "@next/font": "13.1.6",
     "@sanity/client": "^4.0.1",
     "@sanity/image-url": "^1.0.2",
